gap was fixed

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,7 +10,7 @@
 .main-styles {
   display: grid;
   grid-template-columns: repeat(4, 200px);
-  grid-gap: 50px 48px;
+  gap: 50px 48px;
   justify-content: space-between;
 }
 
